[ADD][UPDATE] Endpoint para actualizar usuario y actualizacion de documentacion
