# src/auth/controller/http_user.go
@@ -31,7 +31,7 @@ func NewUserHttpController(bus bus.Bus) *HttpUserController {
 //	@Summary	Actualizar el correo electronico
 //	@Tags		auth
 //	@Success	200
-//	@Failure	503				object		utils.ProblemDetails				"Error con la base de datos"
+//	@Failure	503	object	utils.ProblemDetails	"Error con la base de datos"
 //	@Router		/api/auth/email [patch]
 func (httpUser *HttpUserController) UpdateEmail(c *gin.Context) {
 	var newEmail *dto.UpdateAuthEmailDTO
@@ -42,6 +42,29 @@ func (httpUser *HttpUserController) UpdateEmail(c *gin.Context) {
 	claims, _ := utils.NewClaimsFromContext(c)
 
 	if err := httpUser.userService.UpdateEmail(*newEmail, claims.ID); err != nil {
+		utils.ResFromErr(c, err)
+		return
+	}
+
+	c.JSON(http.StatusOK, nil)
+}
+
+// User Update godoc
+//
+//	@Summary	Actualizar informacion del usuario, name || phone
+//	@Tags		auth
+//	@Success	200
+//	@Failure	503	object	utils.ProblemDetails	"Error con la base de datos"
+//	@Router		/api/auth/user [patch]
+func (httpUser *HttpUserController) UpdateUser(c *gin.Context) {
+	var userUpdateData *dto.UserUpdateData
+	if err := c.BindJSON(&userUpdateData); err != nil {
+		utils.ResErrValidators(c, err)
+		return
+	}
+	claims, _ := utils.NewClaimsFromContext(c)
+
+	if err := httpUser.userService.UserUpdate(claims.ID, *userUpdateData); err != nil {
 		utils.ResFromErr(c, err)
 		return
 	}
