# src/cmd/http/docs/swagger.json
@@ -27,6 +27,25 @@
     "host": "localhost:8080",
     "basePath": "/api",
     "paths": {
+        "/api/auth/email": {
+            "patch": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Actualizar el correo electronico",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
         "/api/auth/login": {
             "post": {
                 "tags": [
@@ -50,6 +69,48 @@
                         "schema": {
                             "$ref": "#/definitions/controller.LoginResponse"
                         }
+                    },
+                    "403": {
+                        "description": "Credenciales inválidas",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    },
+                    "409": {
+                        "description": "La sesión no existe. Probablemente porque la eliminaron",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/auth/password": {
+            "patch": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Actualizar la contraseña",
+                "parameters": [
+                    {
+                        "description": "name, username, email, password, role",
+                        "name": "authDto",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.RegisterDto"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
                     },
                     "403": {
                         "description": "Credenciales inválidas",
@@ -166,6 +227,97 @@
                 }
             }
         },
+        "/api/auth/user": {
+            "patch": {
+                "tags": [
+                    "auth"
+                ],
+                "summary": "Actualizar informacion del usuario, name || phone",
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/generators/code": {
+            "post": {
+                "tags": [
+                    "code"
+                ],
+                "summary": "Crear codigo",
+                "parameters": [
+                    {
+                        "description": "usesRemaining, type y duration",
+                        "name": "newCodeDTO",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.NewCodeDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "201": {
+                        "description": "Created"
+                    },
+                    "404": {
+                        "description": "Usuario no encontrado",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/generators/code/verify/{code}": {
+            "get": {
+                "tags": [
+                    "code"
+                ],
+                "summary": "Verificar si un codigo es valido",
+                "parameters": [
+                    {
+                        "description": "code",
+                        "name": "CodeDTO",
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/dto.CodeDTO"
+                        }
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "404": {
+                        "description": "Usuario no encontrado",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
         "/api/profiles": {
             "patch": {
                 "tags": [
@@ -225,6 +377,37 @@
                         "description": "Archivo no recibido o inválido",
                         "schema": {
                             "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
+        "/api/profiles/{idUser}/views": {
+            "get": {
+                "tags": [
+                    "profile"
+                ],
+                "summary": "Recibir los views temporales de un usuario",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "idUser",
+                        "name": "idUser",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/controller.GetUserViews"
                         }
                     },
                     "503": {
@@ -454,6 +637,34 @@
                 }
             }
         },
+        "/api/publications/{idPublication}/view": {
+            "post": {
+                "tags": [
+                    "publications"
+                ],
+                "summary": "Añadir una \"view\" a una publicacion",
+                "parameters": [
+                    {
+                        "type": "integer",
+                        "description": "Id de publicacion",
+                        "name": "idPublication",
+                        "in": "path",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "200": {
+                        "description": "OK"
+                    },
+                    "503": {
+                        "description": "Error con la base de datos",
+                        "schema": {
+                            "$ref": "#/definitions/utils.ProblemDetails"
+                        }
+                    }
+                }
+            }
+        },
         "/api/tattoos": {
             "post": {
                 "description": "```json\n{\n\"tattoos\": [\n{\n\"description\": \"Descripción del tatuaje\",\n\"image\": \"archivo_imagen\",\n\"coord\": {\"x\": 100, \"y\": 200},\n}]\n}\n```",
@@ -572,7 +783,7 @@
         "controller.GetLikeResponse": {
             "type": "object",
             "properties": {
-                "is_like": {
+                "isLiked": {
                     "type": "boolean"
                 }
             }
@@ -603,6 +814,17 @@
                     "type": "array",
                     "items": {
                         "$ref": "#/definitions/model.Tattoo"
+                    }
+                }
+            }
+        },
+        "controller.GetUserViews": {
+            "type": "object",
+            "properties": {
+                "views": {
+                    "type": "array",
+                    "items": {
+                        "type": "integer"
                     }
                 }
             }
@@ -662,6 +884,44 @@
                 },
                 "username": {
                     "type": "string"
+                }
+            }
+        },
+        "dto.CodeDTO": {
+            "type": "object",
+            "required": [
+                "code"
+            ],
+            "properties": {
+                "code": {
+                    "type": "string"
+                },
+                "idUser": {
+                    "type": "integer"
+                }
+            }
+        },
+        "dto.NewCodeDTO": {
+            "type": "object",
+            "required": [
+                "duration",
+                "type",
+                "usesRemaining"
+            ],
+            "properties": {
+                "duration": {
+                    "type": "integer",
+                    "minimum": 1
+                },
+                "idUser": {
+                    "type": "integer"
+                },
+                "type": {
+                    "type": "string"
+                },
+                "usesRemaining": {
+                    "type": "integer",
+                    "minimum": 1
                 }
             }
         },
@@ -805,6 +1065,9 @@
                     "items": {
                         "$ref": "#/definitions/model.Tattoo"
                     }
+                },
+                "views": {
+                    "type": "integer"
                 }
             }
         },
