# src/user/controller/profile.go
@@ -107,9 +107,9 @@ func (httpProfile *HttpProfileController) ChangeAvatar(c *gin.Context) {
 //
 //	@Summary	Recibir los views temporales de un usuario
 //	@Tags		profile
-//	@Success	200			{object}	controller.GetUserViews
+//	@Success	200		{object}	controller.GetUserViews
 //	@Param		idUser	path		string					true	"idUser"
-//	@Failure	503			object		utils.ProblemDetails	"Error con la base de datos"
+//	@Failure	503		object		utils.ProblemDetails	"Error con la base de datos"
 //	@Router		/api/profiles/{idUser}/views [Get]
 func (httpProfile *HttpProfileController) GetAllUserViews(c *gin.Context) {
 	identifier := c.Param("identifier")
